# nix-broken-ghc-plugin-example

./: .gitignore  example.cabal  flake.nix
